--- a/composer.json
+++ b/composer.json
@@ -4,5 +4,10 @@
         "facebook/php-sdk-v4": "~5.0",
         "apache/log4php": "2.3.0",
         "facebook/facebook-instant-articles-sdk-php": "^1.0.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "Facebook\\InstantArticles\\": ["fbaddons/Facebook/InstantArticles/"]
+        }
     }
 }
